Fix the navbar on mobile

--- a/_sass/nova.scss
+++ b/_sass/nova.scss
@@ -7,6 +7,11 @@ Author: Shadowfacts
 	background-color: #FFFFFF;
 	border-style: solid;
 	border-bottom: thick solid #E6E6E6;
+	
+	ul > hr {
+		margin-top: 7.5px;
+		margin-bottom: 7.5px;
+	}
 }
 
 .nova-header {
